# ewoms-common

./: CMakeLists.txt  INSTALL.md  README.md  config.h.cmake  debug.opts  dune.module  ewoms-common.pc.in  optim.opts
cmake/modules/: EwomsCommonMacros.cmake  EwomsMacros.cmake  FindStdAny.cmake  FindStdFilesystem.cmake  FindStdOptional.cmake  FindStdStringView.cmake  FindStdVariant.cmake  FindValgrind.cmake
ewoms/common/: alignedallocator.hh  any.hh  conditionalstorage.hh  exceptions.hh  fastsmallvector.hh  filesystem.hh  final.hh  genericguard.hh  hasmembergeneratormacros.hh  intervaltabulated2dfunction.hh  mathtoolbox.hh  means.hh  optional.hh  parametersystem.hh  polynomialutils.hh  prefetch.hh  propertysystem.hh  quad.hh  resetlocale.hh  rootfinders.hh  signum.hh  spline.hh  string.hh  string_view.hh  tabulated1dfunction.hh  timer.hh  timerguard.hh  tridiagonalmatrix.hh  uniformtabulated2dfunction.hh  uniformxtabulated2dfunction.hh  unused.hh  valgrind.hh  variant.hh
ewoms/common/densead/: dynamicevaluation.hh  evaluation.hh  evaluation1.hh  evaluation10.hh  evaluation11.hh  evaluation12.hh  evaluation2.hh  evaluation3.hh  evaluation4.hh  evaluation5.hh  evaluation6.hh  evaluation7.hh  evaluation8.hh  evaluation9.hh  evaluationspecializations.hh  math.hh
ewoms/common/fmt/: chrono.h  compile.h  core.h  format.h  locale.h  printf.h  ranges.h
ewoms/common/fmt/fmt/: color.h  format-inl.h  os.h  ostream.h
ewoms/common/parallel/: mpibuffer.hh  tasklets.hh
tests/: test_2dtables.cc  test_conditionalstorage.cc  test_densead.cc  test_propertysystem.cc  test_rootfinders.cc  test_spline.cc  test_tasklets.cc
